# fiap_datathonapp

./: .gitignore  00_Home.py  Home.py  README.md  dash.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: TbAluno.csv  agModels-predictBolsistaSummaryOfModels.html  agModels-predictPedraSummaryOfModels.html  df_2020.csv  df_2020_preproc.csv  df_2020_preproc_select.csv  df_2021.csv  df_2021_preproc.csv  df_2021_preproc_select.csv  df_2022.csv  df_2022_clustering.csv  df_2022_preproc.csv  df_2022_preproc_select.csv  df_pooled_common.csv  df_pooled_ranking.csv  df_pooled_ranking_clean.csv  df_pooled_ranking_clean_with_cg.csv  dicionario_dados.csv  dicionario_dados.csv:Zone.Identifier
data/agModels-predictBolsista/: learner.pkl  metadata.json
data/agModels-predictBolsista/models/: trainer.pkl
data/agModels-predictBolsista/models/CatBoost_BAG_L1/: model.pkl
data/agModels-predictPedra/: learner.pkl  metadata.json
data/agModels-predictPedra/models/: trainer.pkl
notebooks/: Autogluon-Bolsa.ipynb  Autogluon-PedraConceito.ipynb  Autogluon-Ranking.ipynb  Clustering-Ranking.ipynb  Clustering-Ranking_h.ipynb  Regression-Ranking.ipynb  agModels-predictBolsistaSummaryOfModels.html  agModels-predictPedraSummaryOfModels.html  agModels-predictRankingSummaryOfModels.html  agModels-predictRanking_mqSummaryOfModels.html  data_preproc.ipynb
pages/: 00_main.py  01_Apresentação.py  02_Análise_Exploratória.py  03_Modelos_Preditivos.py  03_Modelos_de_Machine-Learning.py  04_Observações.py
pages/models/: autogluon_bolsa.py  autogluon_bolsa_predict.py  autogluon_pedra.py  autogluon_pedra_predict.py  clustering_ranking.py  clustering_ranking_h.py
(+353 files in other folders)
