[project]
name = "datathonapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.5.0",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit-aggrid>=1.0.5",
    "streamlit>=1.38.0",
    "tensorflow[and-cuda]>=2.17.0",
    "xgboost>=2.1.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
]
