[project]
name = "datathonapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.1.1",
    "keras>=3.5.0",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "streamlit-aggrid>=1.0.5",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = [
    "bokeh>=3.5.2",
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
]
